Revert "Reducing portfolio categories down to two"
This reverts commit 01c65e600583f373ee3317a3982e636d7537981d.

--- a/index.html
+++ b/index.html
@@ -712,11 +712,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Completed</button>
+              <button data-filter-btn>Web design</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Current</button>
+              <button data-filter-btn>Applications</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Web development</button>
             </li>
 
           </ul>
@@ -740,11 +744,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Completed</button>
+                <button data-select-item>Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Current</button>
+                <button data-select-item>Applications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web development</button>
               </li>
 
             </ul>
@@ -753,7 +761,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -766,12 +774,12 @@
 
                 <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -784,12 +792,12 @@
 
                 <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -802,12 +810,12 @@
 
                 <h3 class="project-title">Brawlhalla</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -820,12 +828,12 @@
 
                 <h3 class="project-title">DSM.</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -838,12 +846,12 @@
 
                 <h3 class="project-title">MetaSpark</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -856,12 +864,12 @@
 
                 <h3 class="project-title">Summary</h3>
 
-                <p class="project-category">Completed</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Current">
+            <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -874,12 +882,12 @@
 
                 <h3 class="project-title">Task Manager</h3>
 
-                <p class="project-category">Current</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Current">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -892,7 +900,7 @@
 
                 <h3 class="project-title">Arrival</h3>
 
-                <p class="project-category">Current</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
