changed the Portfolio Applications category to Current

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Current</button>
             </li>
 
             <li class="filter-item">
@@ -748,7 +748,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Current</button>
               </li>
 
               <li class="select-item">
@@ -797,7 +797,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="current">
               <a href="#">
 
                 <figure class="project-img">
@@ -810,7 +810,7 @@
 
                 <h3 class="project-title">Brawlhalla</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Current</p>
 
               </a>
             </li>
@@ -869,7 +869,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="current">
               <a href="#">
 
                 <figure class="project-img">
@@ -882,7 +882,7 @@
 
                 <h3 class="project-title">Task Manager</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Current</p>
 
               </a>
             </li>
