changed the Portfolio Web design category to Completed

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Completed</button>
             </li>
 
             <li class="filter-item">
@@ -744,7 +744,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Completed</button>
               </li>
 
               <li class="select-item">
@@ -779,7 +779,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -792,7 +792,7 @@
 
                 <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
@@ -815,7 +815,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -828,12 +828,12 @@
 
                 <h3 class="project-title">DSM.</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -846,7 +846,7 @@
 
                 <h3 class="project-title">MetaSpark</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
