--- a/index.html
+++ b/index.html
@@ -719,10 +719,6 @@
               <button data-filter-btn>Current</button>
             </li>
 
-            <li class="filter-item">
-              <button data-filter-btn>Web development</button>
-            </li>
-
           </ul>
 
           <div class="filter-select-box">
@@ -751,17 +747,13 @@
                 <button data-select-item>Current</button>
               </li>
 
-              <li class="select-item">
-                <button data-select-item>Web development</button>
-              </li>
-
             </ul>
 
           </div>
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -774,7 +766,7 @@
 
                 <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
@@ -797,7 +789,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="current">
+            <li class="project-item  active" data-filter-item data-category="Completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -810,7 +802,7 @@
 
                 <h3 class="project-title">Brawlhalla</h3>
 
-                <p class="project-category">Current</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
@@ -851,7 +843,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
@@ -864,7 +856,7 @@
 
                 <h3 class="project-title">Summary</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Completed</p>
 
               </a>
             </li>
@@ -887,7 +879,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="current">
               <a href="#">
 
                 <figure class="project-img">
@@ -900,7 +892,7 @@
 
                 <h3 class="project-title">Arrival</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Current</p>
 
               </a>
             </li>
