--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Completed">
+            <li class="project-item  active" data-filter-item data-category="completed">
               <a href="#">
 
                 <figure class="project-img">
