Updated Project Images and Labels

--- a/index.html
+++ b/index.html
@@ -761,10 +761,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/OcclusionDataset-crop.png" alt="synthetic occlusion image dataset" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Synthetic Occlusion Image Dataset</h3>
 
                 <p class="project-category">Completed</p>
 
@@ -779,10 +779,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/OcclusionCNNStudy-crop.png" alt="occlusion consequences cnn study" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Occlusion Consequences CNN study</h3>
 
                 <p class="project-category">Completed</p>
 
@@ -797,10 +797,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/BlenderRoboCup-crop.png" alt="blender image dataset for vlocnet pose estimation" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Blender Image Dataset for VLocNet Pose Estimation</h3>
 
                 <p class="project-category">Completed</p>
 
@@ -815,10 +815,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Rayleigh1_scaledcrop.png" alt="biomimetic rayleigh scattering solar compass" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Biomimetic Rayleigh Scattering Solar Compass</h3>
 
                 <p class="project-category">Completed</p>
 
@@ -833,28 +833,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/NUbotsSoccerRobot2-litecrop.jpg" alt="vlocnet for soccer robot pose estimation at robocup" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Completed</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="completed">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">VLocNet for Soccer Robot Pose Estimation at RoboCup</h3>
 
                 <p class="project-category">Completed</p>
 
@@ -869,10 +851,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/WeedImageRepo-litecrop.jpg" alt="field weed image repository" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">Field Weed Image Repository</h3>
 
                 <p class="project-category">Current</p>
 
@@ -887,10 +869,28 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/Weeds3DBiomass-litecrop.png" alt="weeds3d biomass estimation" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Weeds3D Biomass Estimation</h3>
+
+                <p class="project-category">Current</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="current">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/BenchBot-litecrop.png" alt="benchbot weed image repository" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">BenchBot Weed Image Repository</h3>
 
                 <p class="project-category">Current</p>
 
