updating \'About me\' and \'What I\'m doing\'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Daniel Ginn">Daniel Ginn</h1>
 
-          <p class="title">Computer Vision Research & Developer</p>
+          <p class="title">Computer Vision Researcher & Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -201,17 +201,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Project oriented machine learning computer vision PhD and Post-Doc with 5.5 years R&D experience. Looking to leverage R&D skills for industry to develop cutting edge AI powered computer vision applications. Most recently working on the creation of custom image datasets that provide the main entry barrier for companies wanting to get into the AI powered technology space.
           </p>
         </section>
 
@@ -229,15 +219,15 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/machine-learning.svg
+                " alt="machine learning icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Machine Learning Computer Vision</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Applying and adapting cutting-edge neural networks for computer vision applications.
                 </p>
               </div>
 
@@ -246,14 +236,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-design.svg" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Synthetic Image Dataset Creation</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Creation of synthetic datasets for domains where no standard datasets exist.
                 </p>
               </div>
 
@@ -262,14 +252,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-robot.svg" alt="robot icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Computer Vision For Robotic Platforms</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Implementation of real time computer vision algorithms onto robotic platforms.
                 </p>
               </div>
 
@@ -278,14 +268,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon2" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">High Throughput Automatic Image Labeling</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Overcoming the key limitation to creating large labeled image datasets.
                 </p>
               </div>
 
